Fixed UI flickering

--- a/src/pages/PageBuilder/Configs/common/common_editor_styles.scss
+++ b/src/pages/PageBuilder/Configs/common/common_editor_styles.scss
@@ -26,7 +26,7 @@
   .middleSection {
     flex-grow: 1;
     flex-basis: 75%;
-    overflow: auto;
+    overflow: hidden;
   }
 
   .topPanel {
